# vla-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config.yaml.example  pyproject.toml  server.py
.github/workflows/: build-images.yml  prepare-release-pr.yml  release.yml
configs/: g1_apple_pnp.yaml  g1_dex3_1cam.yaml  g1_dex3_2cam.yaml
models/: __init__.py  base.py  groot.py  pi05.py  smolvla.py
tests/: test_groot.py  test_load_adapter.py  test_server.py
