[project]
name = "vla-server"
version = "0.1.0"
description = "Consolidated VLA inference server — SmolVLA, pi0.5, and future models"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
# Install SmolVLA deps: uv pip install -e ".[smolvla]"
smolvla = [
    "torch>=2.1.0",
    "opencv-python>=4.8.0",
]
# Install GR00T deps: uv pip install -e ".[groot]"
groot = [
    "pyzmq>=25.0",
    "msgpack>=1.0",
    "msgpack-numpy>=0.4",
]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
]

# NOTE: LeRobot must be installed separately for real model inference:
#   git clone https://github.com/huggingface/lerobot.git
#   cd lerobot && uv pip install -e ".[smolvla]"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
